apply plugin: 'java-library'
apply plugin:  'application'
apply plugin: 'java'
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
sourceCompatibility = 16
//全局范围变量
ext {
    devzzkfUsername="sunhu01"
    devzzkfPassword="AKCp8nGQxwjyVhLUGtWhZd2o4vuE9xM7VhcESiuTamUdqb3ovj8msjBQKErZr6ixPpvGGHFzb"
}
repositories {
    maven {
        url "https://maven.aliyun.com/repository/central"
    }
    maven {
        url "http://134.64.116.90:8101/nexus/repository/Java4AhdxZZKF/"
        allowInsecureProtocol = true
        credentials {
            username "devzzkf"
            password "Dev2022!"
        }
    }
    maven {
        url "https://maven.aliyun.com/repository/jcenter"
    }
    maven {
        url "https://artifact.srdcloud.cn/artifactory/unifiedplatform-release-gradle-local/"
        credentials {
            username devzzkfUsername
            password devzzkfPassword
        }
    }
    mavenCentral()

}
application {
    mainClassName = 'com.chinatelecom.operations.aqmhserivce.Server'
    // applicationDefaultJvmArgs = ['--add-opens java.base/java.lang=ALL-UNNAMED']
    applicationDefaultJvmArgs = ['--add-opens','java.base/java.lang=ALL-UNNAMED','-Dfile.encoding=UTF-8']
}

dependencies {

    implementation(
            'com.ahchinatelecom.it:auth-library:1.1.0',
            'com.chinatelecom.udp.core:embed-server:it.1.1.0',
            'com.chinatelecom.udp.core:websecurity-library:it.1.1.0',
            'commons-fileupload:commons-fileupload:1.4',
            'com.chinatelecom.udp.core:key-library:it.1.1.0',
            'org.apache.tomcat.embed:tomcat-embed-websocket:10.0.11',
            'org.postgresql:postgresql:42.2.20',
            'xerces:xercesImpl:2.12.1',
            'org.apache.logging.log4j:log4j-api:2.17.0',
            'org.apache.logging.log4j:log4j-core:2.17.0',
            'org.aspectj:aspectjweaver:1.9.5',
            'com.baomidou:mybatis-plus:3.5.0',
            'commons-pool:commons-pool:1.5.1',
            'com.baomidou:mybatis-plus-generator:3.5.0',
            'org.apache.velocity:velocity-engine-core:2.3'
    )
    annotationProcessor  'org.projectlombok:lombok:1.18.20'
    compileOnly 'org.projectlombok:lombok:1.18.20'
    testImplementation 'junit:junit:4.13'
}

//排除的jar包
configurations.all {
    exclude group: 'cglib'
}

//编译时的参数
compileJava {
    options.compilerArgs << '-parameters'
}

//复制文件到html
processResources {
    from ('src/main/webapp') {
        into 'html'
    }
}

version='1.0'
